# kustomize-sops-rs

./: .editorconfig  Cargo.toml  LICENSE  README.md  bors.toml  install.sh
.github/workflows/: release.yml  tests.yml
src/: cli.rs  decryption.rs  installer.rs  lib.rs  main.rs  maps.rs  types.rs
tests/: integration.rs
tests/kustomization/: encrypted.yaml  ingress.enc.yaml  kustomization.yaml  private.key  secrets.yaml
