[package]
name = "kustomize-sops"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = { version = "3.2.6", features = ["derive"] }
color-eyre = "0.5.11"
dirs = "3.0.2"
serde = { version = "1.0.127", features = ["derive"] }
serde_yaml = "0.8.17"
