[package]
name = "kustomize-sops"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = { version = "3.0.0-beta.4", features = ["derive"] }
color-eyre = "0.5.11"
dirs = "4.0.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_yaml = "0.8.17"
